# jarvis

./: .env  .gitignore  CLAUDE.md  README.md  Untitled Diagram.drawio  corpus.json  favorites.md  geberators.py  justfile  pyproject.toml  requirements.txt  run_all_training.sh  run_daily_summary.sh  run_hourly_trade.sh  run_overnight_training.sh  run_trade.sh
accounts/: example.env  mirat.env
docs/: architecture.md
experiments/: multi_strategy_backtest.py
jarvis/: .env.example  jarvis.py
logs/: backtest.log.3
results/: ADAUSDT_ee4b46f4_4h_20241226_20251226.json  AVAXUSDT_0cc4bc2f_4h_20241227_20251227.json  BNBUSDT_f1d3717e_4h_20241228_20251228.json  BTCUSDT_07d8dc58_4h_20241227_20251227.json  BTCUSDT_0b8275ce_1h_20240601_20240901.json  BTCUSDT_1ca310a2_1h_20240601_20240901.json  BTCUSDT_37ee7ff9_1d_20240101_20241201.json  BTCUSDT_5b958a3d_1d_20240101_20251201.json  BTCUSDT_78a9a6c2_1d_20230101_20241201.json  BTCUSDT_ad3cf69f_1d_20240101_20241201.json  BTCUSDT_c2078d66_1d_20240101_20241201.json  BTCUSDT_c8a13b9f_1d_20240101_20241201.json  BTCUSDT_d7a546ff_1d_20240101_20241201.json  BTCUSDT_e5babbb4_1h_20241224_20251224.json  BTCUSDT_fa894503_4h_20241226_20251226.json  DOGEUSDT_5d99c5d2_4h_20240101_20251201.json  DOGEUSDT_d77db325_1d_20240101_20251201.json  DOTUSDT_7a776159_4h_20241227_20251227.json  ETHUSDT_5bdb12c7_1d_20240101_20251201.json  ETHUSDT_7ee69627_4h_20240101_20251201.json  ETHUSDT_bbe4fe33_1h_20240101_20251201.json  ETHUSDT_c3b662fa_1d_20240101_20251201.json  ETHUSDT_dc6f50d7_1d_20240101_20251201.json  ETHUSDT_ee168895_4h_20241226_20251226.json  (+41 more)
(+31002 files in other folders)
