[project]
name = "jarvis"
version = "0.1.0"
description = "Cryptocurrency trading automation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-binance>=1.0.19",
    "pydantic-settings>=2.0.0",
    "sentry-sdk>=2.0.0",
    "freezegun>=1.4.0",
    "ring>=0.10.0",
    "requests>=2.32.0",
    "enlighten>=1.12.0",
    "pandas-ta>=0.3.14b0",
    "ta>=0.11.0",
    "mplfinance>=0.12.10b0",
    "simplejson>=3.19.0",
    "ta-lib>=0.6.8",
    "plotly>=6.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
    "types-simplejson>=3.19.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"
packages = ["jarvis"]
explicit_package_bases = true
